--- a/Changelog
+++ b/Changelog
@@ -81,7 +81,7 @@ version 3.3.3:
 - avcodec/indeo4: Check remaining data in Pic hdr extension parsing code
 - avcodec/ac3dec_fixed: Fix multiple runtime error: signed integer overflow: -39271008 * 59 cannot be represented in type 'int'
 - lavc/aarch64/simple_idct: fix idct_col4_top coefficient
-
++- V4L2 mem2mem HW assisted codecs
 
 version 3.3.2:
 - avcodec/mpeg4videodec: Fix runtime error: signed integer overflow: 53098 * 40448 cannot be represented in type 'int'
